Products/deployment/api-DC.yml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "products-api"
  namespace: "api-first-workshop"
  labels:
    app: "products-api"
spec:
  selector:
    matchLabels:
      app: "products-api" 
  template: 
    metadata:
      labels:
        app: "products-api"
    spec:
      containers:
        - name: "products-api"
          image: "${REGISTRY}/products-api:1.0"
          ports:
            - containerPort: 5555
              protocol: "TCP"
          volumeMounts:
            - name: config-volume
              mountPath: /opt/swagmsr/config
            - name: data-volume
              mountPath: /data
            - name: data-set-names
              mountPath: /data/utils/dataSet
            - name: wmpublic-config
              mountPath: /opt/softwareag/IntegrationServer/instances/default/packages/WmPublic/config/fileAccessControl.cnf
              subPath: fileAccessControl.cnf
            - mountPath: /opt/softwareag/IntegrationServer/instances/default/config/integrationlive
              name: iscloudconfig  
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: config-volume
          configMap:
            name: application-properties-is
        - name: data-volume
          configMap:
            name: demodata
        - name: wmpublic-config
          configMap:
            name: wmpublic-config
        - name: data-set-names
          configMap:
            name: datasetnames
        - name: iscloudconfig
          persistentVolumeClaim:
            claimName: is-cloud-config
  replicas: 1
